--- a/src/View/Relatorios.form
+++ b/src/View/Relatorios.form
@@ -91,9 +91,8 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagens/lanchonet.png"/>
+              <Image iconType="3" name="/Imagens/relatorio.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Relat&#xf3;rio"/>
           </Properties>
         </Component>
       </SubComponents>
