--- a/src/View/NovaReceita.form
+++ b/src/View/NovaReceita.form
@@ -96,7 +96,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="176" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="88" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -120,9 +120,8 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagens/categoria.png"/>
+              <Image iconType="3" name="/Imagens/receita.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Receita"/>
           </Properties>
         </Component>
       </SubComponents>
